--- a/ForumMining/pom.xml
+++ b/ForumMining/pom.xml
@@ -14,6 +14,7 @@
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <spring.version>3.0.5.RELEASE</spring.version>
   </properties>
   <dependencies>
     <dependency>
@@ -22,5 +23,38 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<!-- Spring 3 dependencies -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+ 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+  <groupId>org.apache.opennlp</groupId>
+  <artifactId>opennlp-tools</artifactId>
+  <version>1.5.3</version>
+</dependency>
+<dependency>
+  <groupId>org.apache.opennlp</groupId>
+  <artifactId>opennlp-uima</artifactId>
+  <version>1.5.3</version>
+</dependency>
+<dependency>
+  <groupId>org.apache.opennlp</groupId>
+  <artifactId>opennlp-maxent</artifactId>
+  <version>3.0.3</version>
+</dependency>
   </dependencies>
+  
 </project>
