--- a/ForumMining/pom.xml
+++ b/ForumMining/pom.xml
@@ -77,6 +77,11 @@
 			<version>3.5.2</version>
 			<classifier>models</classifier>
 		</dependency>
+		<dependency> 
+    <groupId>xml-apis</groupId>
+    <artifactId>xml-apis</artifactId>
+    <version>1.4.01</version>
+</dependency>
 	</dependencies>
 
 </project>
