--- a/ForumMining/pom.xml
+++ b/ForumMining/pom.xml
@@ -77,11 +77,18 @@
 			<version>3.5.2</version>
 			<classifier>models</classifier>
 		</dependency>
-		<dependency> 
-    <groupId>xml-apis</groupId>
-    <artifactId>xml-apis</artifactId>
-    <version>1.4.01</version>
-</dependency>
+		<dependency>
+			<groupId>xml-apis</groupId>
+			<artifactId>xml-apis</artifactId>
+			<version>1.4.01</version>
+		</dependency>
+		<dependency>
+			<groupId>com.apporiented</groupId>
+			<artifactId>hierarchical-clustering</artifactId>
+			<version>1.1.1-SNAPSHOT</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/resources/hierarchical-clustering-1.1.1-SNAPSHOT.jar</systemPath>
+		</dependency>
 	</dependencies>
 
 </project>
